--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -17,7 +17,7 @@
 		<div id="root"></div>
 		<script
 			type="module"
-			src="/src/main.jsx"
+			src="/src/main.tsx"
 		></script>
 	</body>
 </html>
