--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -15,9 +15,53 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script
+		<h2>atom://test.png & file://test.png</h2>
+		<img
+			src="atom://test.png"
+			alt=""
+			srcset=""
+		/>
+		<img
+			src="file://test.png"
+			alt=""
+			srcset=""
+		/>
+		<h2>atom://public/test.png & file://public/test.png</h2>
+		<img
+			src="atom://public/test.png"
+			alt=""
+			srcset=""
+		/>
+		<img
+			src="file://public/test.png"
+			alt=""
+			srcset=""
+		/>
+		<h2>atom://resources/test.png & file://resources/test.png</h2>
+		<img
+			src="atom://resources/test.png"
+			alt=""
+			srcset=""
+		/>
+		<img
+			src="file://resources/test.png"
+			alt=""
+			srcset=""
+		/>
+		<h2>atom:///resources/test.png & file:///resources/test.png</h2>
+		<img
+			src="atom:///resources/test.png"
+			alt=""
+			srcset=""
+		/>
+		<img
+			src="file:///resources/test.png"
+			alt=""
+			srcset=""
+		/>
+		<!-- <script
 			type="module"
 			src="/src/main.tsx"
-		></script>
+		></script> -->
 	</body>
 </html>
