--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
+		<!-- BUG: 以下所有链接均无法正常获取 -->
 		<h2>atom://test.png & file://test.png</h2>
 		<img
 			src="atom://test.png"
