修复 toolbar 滚动条问题

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -13,7 +13,7 @@
 		/>
 		<title>互动翻书 </title>
 	</head>
-	<body>
+	<body style="height: 100%; overflow: hidden">
 		<div id="root"></div>
 		<script
 			type="module"
